log
Mon 13 May 2024 03:33:24 PM UTC: 
 tests:  0|5
total_score: 0/70
7f661e1
Mon 13 May 2024 03:41:21 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
266306b
Mon 13 May 2024 03:41:31 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
34deea2
Mon 13 May 2024 03:59:16 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:17: error: unused variable ‘l’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |                 ^
sudoku.c:47:14: error: unused variable ‘j’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |              ^
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |           ^
sudoku.c:47:8: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
f1a17f8
Mon 13 May 2024 04:00:44 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:17: error: unused variable ‘l’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |                 ^
sudoku.c:47:14: error: unused variable ‘j’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |              ^
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |           ^
sudoku.c:47:8: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |    int i, k, j, l;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
9122cff
Mon 13 May 2024 04:01:21 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
3e1b098
Mon 13 May 2024 04:04:10 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:7: error: implicit declaration of function ‘isvalid’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
   76 |    if(isvalid(n)){
      |       ^~~~~~~
      |       is_valid
sudoku.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
   79 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
12f472c
Thu 16 May 2024 12:53:42 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
c9a0a97
Thu 16 May 2024 12:56:06 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
2a125fd
Thu 16 May 2024 12:57:37 AM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  10|0
total_score: 70/70
ddea934
